Finish the first stable

--- a/plugin/manifest.json
+++ b/plugin/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "AsReal",
+  "name": "Fixiq — Fix the scale of working area",
   "id": "1408159959797666812",
   "api": "1.0.0",
   "main": "code.js",
