--- a/plugin/package.json
+++ b/plugin/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "AsReal",
+  "name": "fixiq",
   "version": "1.0.0",
-  "description": "Your Figma Plugin",
+  "description": "Figma plugin that fixes the scale of the working area",
   "main": "code.js",
   "scripts": {
     "build": "tsc -p tsconfig.json",
